# esp32-node

./: .gitignore  sdkconfig  sdkconfig.old
components/max7219/: max7219.c
components/max7219/include/: max7219.h
components/my_component/: my_component.c
components/my_component/include/: my_component.h
components/xbee/: CMakeLists.txt
components/xbee/include/xbee/: platform.h  serial.h
components/xbee/ports/esp32/: platform_config.h  xbee_serial_esp32.c
components/xbee/samples/common/: _atinter.c
components/xbee/samples/win32/: Makefile  test_xbee.c
components/xbee/src/xbee/: xbee_atcmd.c  xbee_device.c  xbee_wpan.c
main/: CMakeLists.txt  Kconfig.projbuild  bare_minimum.c  blink_example_main.c  esp32_pin_aliases.h  fetch_image.c  fetch_image.h  fetch_test.c  handleFrame.c  indicator.c  indicator.h  main.c  network_scan.c  node_discovery.c  node_sensor_config.h  node_xbee.c  node_xbee.h  output.c  output.h  read_sensor.c  router_test.c  send_image.c  send_image_with_sensors.c  test_indicator.c  ultrasonic_sensors.c  ultrasonic_sensors.h  wpan_test.c
